Antes de usar Boostrap

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -27,7 +27,7 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./about.html">Sobre Mí</a></li>
                     <li><a class="active" href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="./habilidades.html">Servicios</a></li>
+                    <li><a href="./habilidades.html">Habilidades</a></li>
                 </ul>
                 <a href="./contact.html" class="contact-btn"><button>Contacto</button></a>
             </div>   
