--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,19 +19,29 @@
     <!-- Header -->
     <header>
         <!-- Top Navigator -->
-        <nav class="header-main">
-            <div class="nav-container">
-                <picture class="logo">
-                    <a href="../index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
-                </picture>
-                <ul class="main-nav">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./about.html">Sobre Mí</a></li>
-                    <li><a href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="./habilidades.html">Habilidades</a></li>
-                </ul>
-                <a href="./contact.html" class="contact-btn"><button>Contacto</button></a>
-            </div>   
+        <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
+            <div id="nav-container" class="container-fluid">
+            <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+                <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul id="main-nav" class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./about.html">Sobre Mí</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./habilidades.html">Habilidades</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="main-contact">
@@ -93,5 +104,6 @@
             <small>&copy; 2023 <b>InfiniteDev</b> - All rights reserved</small>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
