Index Responsive c/ Boostrap

--- a/pages/about.html
+++ b/pages/about.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main class="main-about">
-        <section class="about">
+        <section class="container-fluid" id="about">
             <picture class="img-container">
                 <img  alt="Logo de InfiniteDev" src="../multimedia/img/Logo Negativo.png" width="500" height="auto">
             </picture>
