--- a/index.html
+++ b/index.html
@@ -52,52 +52,54 @@
     
     <main> 
         <!-- Sección descriptiva + CV + More Info -->
-        <section class="intro">
-            <picture class="img-container">
-                <img  alt="Ilustración descriptiva de un diseñador ux/ui." src="./multimedia/img/ilustracion1.png" width="500" height="auto">
-            </picture>
-            <article class="descripciones">
-                <div class="brand-name">InfiniteDev</div>
-                <h1>
-                    <span>UX/UI Designer</span> 
-                </h1>
-                <p>
-                    Hola, soy Bautista Centorbi, creador y dueño de InfiniteDev. Ofrecemos soluciones digitales en tópicos como Diseño UX/UI y Desarrollo Web.
-                </p>
-                <div class="logos-container">
-                    <div class="logos">
-                        <i class="fab fa-html5"></i>
-                    </div>
-                    <div class="logos">
-                        <i class="fab fa-css3"></i>
-                    </div>
-                    <div class="logos">
-                        <i class="fab fa-figma"></i>
-                    </div>
+        <section class="container-fluid" id="intro">
+            <div class="row">
+                <div id="img-container" class="col-lg-4 col-md-4 col-sm-0">
+                    <img  alt="Ilustración descriptiva de un diseñador ux/ui." src="./multimedia/img/ilustracion1.png" width="500" height="auto">
                 </div>
-                <a href="./pages/about.html" class="about-btn"><button>Más Sobre Mí</button></a>
-                <a download href="./multimedia/Bautista Centorbi CV.pdf" class="cv-btn"><button>DESCARGAR CV</button></a>
-            </article>
+                <div id="descripciones" class="col-lg-8 col-md-8 col-sm-12">
+                    <div class="brand-name">InfiniteDev</div>
+                    <h1>
+                        <span>UX/UI Designer</span> 
+                    </h1>
+                    <p>
+                        Hola, soy Bautista Centorbi, creador y dueño de InfiniteDev. Ofrecemos soluciones digitales en tópicos como Diseño UX/UI y Desarrollo Web.
+                    </p>
+                    <div class="logos-container">
+                        <div class="logos">
+                            <i class="fab fa-html5"></i>
+                        </div>
+                        <div class="logos">
+                            <i class="fab fa-css3"></i>
+                        </div>
+                        <div class="logos">
+                            <i class="fab fa-figma"></i>
+                        </div>
+                    </div>
+                    <a href="./pages/about.html" class="about-btn"><button>Más Sobre Mí</button></a>
+                    <a download href="./multimedia/Bautista Centorbi CV.pdf" class="cv-btn"><button>DESCARGAR CV</button></a>
+                </div>
+            </div>
         </section>
-        <section class="projects">
-            <article class="projects-info-container">
+        <section class="container" id="projects">
+            <div class="" id="projects-info-container">
                 <h2>
                     Algunos de mis 
                     <span>trabajos</span>
                     <i class="fa-solid fa-arrow-turn-down"></i>
                 </h2>
-                <div class="projects-container">
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img  width="380px" src="./multimedia/img/Job-1.png" alt=""><div>CAB app Redesign</div></a>
+                <div class="row" id="projects-container">
+                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="./multimedia/img/Job-1.png" alt="CAB App Redesign"></a>
+                    </div>  
+                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="./multimedia/img/Job-2.png" alt="WayToGo UX/UI Design"></a>
                     </div>
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img  width="380px" src="./multimedia/img/Job-2.png" alt=""><div>WayToGo app</div></a>
-                    </div>
-                    <div class="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img  width="380px" src="./multimedia/img/Job-3.png" alt=""><div>Caffè Brand Design</div></a>
+                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="./multimedia/img/Job-3.png" alt=""></a>
                     </div>
                 </div>
-            </article>
+            </div>
         </section>
     </main>
     
