--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- css -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -105,10 +107,10 @@
     
     <!-- Footer -->
     
-    <footer class="footer">
-        <div class="footer-container">
+    <footer class="container-fluid" id="footer">
+        <div class="row" id="footer-container">
             <!-- Left Column/Contacto -->
-            <div class="footer-columns">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
@@ -116,7 +118,7 @@
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
-            <div class="footer-columns">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="indice">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./about.html">Sobre Mí</a></li>
@@ -126,13 +128,13 @@
                 </ul>
             </div>
             <!-- Right Column/Redes Sociales -->
-            <div class="footer-social">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-social">
                 <a target="_blank" class="instagram" href="https:/www.instagram.com/centorbii"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" class="behance" href="https://www.behance.net/bautistcentorb"><i class="fab fa-behance-square"></i></a>
                 <a target="_blank" class="linkedin" href="https:/www.linkedin.com/in/bautista-centorbi"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div class="row" id="footer-bottom">
             <small>&copy; 2023 <b>InfiniteDev</b> - All rights reserved</small>
         </div>
     </footer>
