--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <!-- Sección descriptiva + CV + More Info -->
         <section class="container-fluid" id="intro">
             <div class="row">
-                <div id="img-container" class="col-lg-4 col-md-4 col-sm-0">
+                <div id="img-container" class="col-lg-4 col-md-12 col-sm-0">
                     <img  alt="Ilustración descriptiva de un diseñador ux/ui." src="./multimedia/img/ilustracion1.png" width="500" height="auto">
                 </div>
-                <div id="descripciones" class="col-lg-8 col-md-8 col-sm-12">
+                <div id="descripciones" class="col-lg-8 col-md-12 col-sm-12">
                     <div class="brand-name">InfiniteDev</div>
                     <h1>
                         <span>UX/UI Designer</span> 
@@ -84,21 +84,21 @@
             </div>
         </section>
         <section class="container" id="projects">
-            <div class="" id="projects-info-container">
+            <div class="row" id="projects-info-container">
                 <h2>
                     Algunos de mis 
                     <span>trabajos</span>
                     <i class="fa-solid fa-arrow-turn-down"></i>
                 </h2>
                 <div class="row" id="projects-container">
-                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
                         <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="./multimedia/img/Job-1.png" alt="CAB App Redesign"></a>
                     </div>  
-                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
                         <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="./multimedia/img/Job-2.png" alt="WayToGo UX/UI Design"></a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="./multimedia/img/Job-3.png" alt=""></a>
+                    <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
+                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="./multimedia/img/Job-3.png" alt="Caffè Branding"></a>
                     </div>
                 </div>
             </div>
