--- a/pages/about.html
+++ b/pages/about.html
@@ -46,10 +46,10 @@
     <main class="main-about">
         <div class="container-fluid" id="about">
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-0" id="img-container">
+                <div class="col-lg-4 col-md-4 col-sm-0" id="img-container">
                     <img  alt="Logo de InfiniteDev" src="../multimedia/img/Logo Negativo.png" width="500" height="auto">
                 </div>
-                <div class="col-lg-8 col-md-6 col-sm-12" id="descripciones-about">
+                <div class="col-lg-8 col-md-8 col-sm-12" id="descripciones-about">
                     <h1>
                         <span>Bautista Centorbi</span> 
                     </h1>
@@ -166,10 +166,10 @@
     
     <!-- Footer -->
     
-    <footer class="footer">
-        <div class="footer-container">
+    <footer class="container-fluid" id="footer">
+        <div class="row" id="footer-container">
             <!-- Left Column/Contacto -->
-            <div class="footer-columns">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
@@ -177,7 +177,7 @@
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
-            <div class="footer-columns">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="indice">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./about.html">Sobre Mí</a></li>
@@ -187,13 +187,13 @@
                 </ul>
             </div>
             <!-- Right Column/Redes Sociales -->
-            <div class="footer-social">
+            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-social">
                 <a target="_blank" class="instagram" href="https:/www.instagram.com/centorbii"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" class="behance" href="https://www.behance.net/bautistcentorb"><i class="fab fa-behance-square"></i></a>
                 <a target="_blank" class="linkedin" href="https:/www.linkedin.com/in/bautista-centorbi"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div class="row" id="footer-bottom">
             <small>&copy; 2023 <b>InfiniteDev</b> - All rights reserved</small>
         </div>
     </footer>
