Index-Responsive-Desktop-md

--- a/pages/about.html
+++ b/pages/about.html
@@ -46,10 +46,10 @@
     <main class="main-about">
         <div class="container-fluid" id="about">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-0" id="img-container">
+                <div class="col-xl-4 col-lg-2 col-md-0 col-sm-0" id="img-container">
                     <img  alt="Logo de InfiniteDev" src="../multimedia/img/Logo Negativo.png" width="500" height="auto">
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-12" id="descripciones-about">
+                <div class="col-xl-8 col-lg-10 col-md-12 col-sm-12" id="descripciones-about">
                     <h1>
                         <span>Bautista Centorbi</span> 
                     </h1>
@@ -63,7 +63,7 @@
         </div>
         <section class="container-fluid" id="more-info">
             <div class="row" id="info-container">
-                <div class="col-lg-6 col-md-6 col-sm-12" id="aptitudes">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" id="aptitudes">
                     <h2>
                         Mis 
                         <span>aptitudes</span>
@@ -77,7 +77,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12" id="habilidades-container">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" id="habilidades-container">
                     <h2>
                         Mis 
                         <span>habilidades</span>
