--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <main> 
         <!-- Sección descriptiva + CV + More Info -->
         <section class="container-fluid" id="intro">
-            <div class="row">
-                <div id="img-container" class="col-lg-4 col-md-12 col-sm-0">
+            <div id="Hero-container" class="row">
+                <div id="img-container" class="col-xl-4 col-lg-2 col-md-12 col-sm-0">
                     <img  alt="Ilustración descriptiva de un diseñador ux/ui." src="./multimedia/img/ilustracion1.png" width="500" height="auto">
                 </div>
-                <div id="descripciones" class="col-lg-8 col-md-12 col-sm-12">
+                <div id="descripciones" class="col-xl-8 col-lg-10 col-md-12 col-sm-12">
                     <div class="brand-name">InfiniteDev</div>
                     <h1>
                         <span>UX/UI Designer</span> 
