Index+About-responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -100,7 +100,7 @@
                 <article class="row" id="educacion">
                     <div class="col-12" id="psp-illustrator">
                         <div class="left-education">
-                            <h4>
+                            <h4 class="education-info">
                                 <span>Coderhouse</span><br>
                                 Curso de Photoshop & Illustrator<br>
                                 <em>Top 10 alumnos de la cursada </em><br>
