--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <footer class="container-fluid" id="footer">
         <div class="row" id="footer-container">
             <!-- Left Column/Contacto -->
-            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
+            <div class="col-xl-4 col-lg-5 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
@@ -118,7 +118,7 @@
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
-            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
+            <div class="col-xl-4 col-lg-5 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="indice">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./about.html">Sobre Mí</a></li>
@@ -128,7 +128,7 @@
                 </ul>
             </div>
             <!-- Right Column/Redes Sociales -->
-            <div class="col-lg-4 col-md-4 col-sm-12" id="footer-social">
+            <div class="col-xl-4 col-lg-2 col-md-4 col-sm-12" id="footer-social">
                 <a target="_blank" class="instagram" href="https:/www.instagram.com/centorbii"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" class="behance" href="https://www.behance.net/bautistcentorb"><i class="fab fa-behance-square"></i></a>
                 <a target="_blank" class="linkedin" href="https:/www.linkedin.com/in/bautista-centorbi"><i class="fab fa-linkedin"></i></a>
