--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,28 +17,31 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header class="header">
         <!-- Top Navigator -->
         <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
             <div id="nav-container" class="container-fluid">
-            <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"><span>InfiniteDev</span></a>
                 <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul id="main-nav" class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./about.html">Sobre Mí</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/about.html">Sobre Mí</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./portfolio.html">Portfolio</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./habilidades.html">Habilidades</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/habilidades.html">Habilidades</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/contact.html">Contacto</a>
+                            </li>
                     </ul>
                 </div>
             </div>
