--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Top Navigator -->
         <nav id="nav-father" class="navbar navbar-expand-lg bg-body-tertiary">
             <div id="nav-container" class="container-fluid">
-                <a id="logo" class="navbar-brand" href="./index.html"><img src="../multimedia/img/Icon-negativo.ico" alt="logo"><span>InfiniteDev</span></a>
+                <a id="logo" class="navbar-brand" href="./index.html"><img src="./multimedia/img/Icon-negativo.ico" alt="logo"><span>InfiniteDev</span></a>
                 <button id="drawer-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
