--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
@@ -40,6 +40,9 @@
                             <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./habilidades.html">Habilidades</a>
                             </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./contact.html">Contacto</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -49,12 +52,15 @@
         <div class="skill-container">
             <section class="habilidades">
                 <h2>¿Qué es lo que hago?</h2>
-                <h4>Soy de Argentina, diseñador UX/UI Jr. En la actualidad me encuentro cursando la carrera de Desarrollo Web en Coderhouse. Estos son los programas que manejo con mayor frecuencia.</h4>
+                <h4>Soy de Argentina, diseñador UX/UI Jr. En la actualidad me encuentro cursando la carrera de Desarrollo Web en Coderhouse. Estas son las tecnologías que manejo con mayor frecuencia.</h4>
                 <ul class="habilidades-ul">
                     <li><i class="fab fa-figma"></i>Figma</li>
                     <li><i class="fab fa-html5"></i>HTML</li>
                     <li><i class="fab fa-css3"></i>CSS</li>
+                    <li><i class="fab fa-bootstrap"></i>Boostrap</li>
+                    <li><i class="fab fa-git"></i>Git</li>
                     <li><i class="fab fa-github"></i>GitHub</li>
+                    <li><i class="fab fa-sass"></i>Sass</li>
                 </ul>
             </section>
         </div>
