All Responsive - Habilidades

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main> 
         <!-- Sección descriptiva + CV + More Info -->
         <section class="container-fluid" id="intro">
-            <div id="Hero-container" class="row">
+            <div id="hero-container" class="row">
                 <div id="img-container" class="col-xl-4 col-lg-2 col-md-12 col-sm-0">
                     <img class="hero-img" alt="Diseñador UX/UI trabajando en la creación de una interfaz de usuario intuitiva." src="./multimedia/img/ilustracion1.png">
                 </div>
@@ -67,7 +67,7 @@
                         <span>UX/UI Designer</span> 
                     </h1>
                     <p>
-                        Hola, soy Bautista Centorbi, creador y dueño de InfiniteDev. Ofrecemos soluciones digitales en tópicos como Diseño UX/UI y Desarrollo Web.
+                        Hola, soy Bautista Centorbi, creador y owner de InfiniteDev. Ofrecemos soluciones digitales de Diseño UX/UI y Desarrollo Web frontend.
                     </p>
                     <div class="logos-container">
                         <div class="logos">
@@ -116,8 +116,8 @@
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
-                    <li><a href="tel:+5492616665348">Enviar mensaje a: +54 9 261-666-5348</a></li>
-                </ul>
+                    <li><a href="https://wa.link/swfz18">Enviar mensaje a: +54 9 261-666-5348</a></li>
+                </ul>   
             </div>
             <!-- Middle Column/Índice -->
             <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
