--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,28 +51,28 @@
             </nav>
         </header>
     <!-- Main -->
-    <main class="main-contact">
-        <div class="container-fluid" id="contacto-container">    
+    <main class="container-fluid" id="main-contact">
+        <div class="row" id="contacto-container">    
             <h1>¿Qué deseas que haga?</h1>
-            <div class="row" id="buttons-container">
-                <div class="col-12" id="checkbox">
+            <div id="buttons-container">
+                <div id="checkbox">
                     <ul>
                         <li><input type="checkbox" name="ux-btn" id="ux-btn"><label for="ux-btn">UX Design</label></li>
-                        <li><input type="checkbox" name="graphic-btn" id="graphic-btn"><label for="graphic-btn">Graphic Design</label></li>
-                        <li><input type="checkbox" name="app-btn" id="app-btn"><label for="app-btn">App Design</label></li>
-                        <li><input type="checkbox" name="web-btn" id="web-btn"><label for="web-btn">Web Design</label></li>
+                        <li ><input type="checkbox" name="graphic-btn" id="graphic-btn"><label for="graphic-btn">Graphic Design</label></li>
+                        <li ><input type="checkbox" name="app-btn" id="app-btn"><label for="app-btn">App Design</label></li>
+                        <li ><input type="checkbox" name="web-btn" id="web-btn"><label for="web-btn">Web Design</label></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="forms">
+        <div class="row" id="forms">
             <h2>Por favor, rellena este formulario</h2>
-            <div class="form-container">
+            <div class="row" id="form-container">
                 <input placeholder="Ingresa tu nombre" type="text" name="name" id="name">
                 <input placeholder="Ingresa tu correo electrónico" type="email" name="mail" id="mail">
                 <input placeholder="Ingresa un número de teléfono" type="text" name="phone" id="phone">
             </div>
-            <div class="submit-btn">
+            <div id="submit-btn">
                 <button type="submit">Enviar</button>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
-                    <li><a href="tel:+5492616665348">Enviar mensaje a: +54 9 261-666-5348</a></li>
+                    <li><a href="https://wa.link/swfz18">Enviar mensaje a: +54 9 261-666-5348</a></li>
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
