--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -78,7 +78,7 @@
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
-                    <li><a href="tel:+5492616665348">Enviar mensaje a: +54 9 261-666-5348</a></li>
+                    <li><a href="https://wa.link/swfz18">Enviar mensaje a: +54 9 261-666-5348</a></li>
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
