--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -51,14 +51,14 @@
             </nav>
         </header>
     <main class="main-portfolio">
-        <section class="last-project">
-            <article class="last-project-container">
-                <h1>
+        <section class="container-fluid" id="last-project">
+            <article class="row" id="last-project-container">
+                <h1 class="col-12">
                     Proyecto más 
                     <span>reciente</span>
                 </h1>
-                <div class="project-iframe">
-                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="700px" height="548px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fx0ONaMjk8kqo9aPNWt7Xwi%2FBautista-Centorbi-%252B-PF-%252B-Plan-de-marketing-digital%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D37-902%26viewport%3D0%252C0%252C1%26t%3DpkKDJ0TSmXCRg44j-1%26scaling%3Dmin-zoom%26starting-point-node-id%3D37%253A902%26mode%3Ddesign" allowfullscreen></iframe>
+                <div class="col-12" id="project-iframe">
+                    <iframe id="figma-prototype" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FAq89EKdp53wR1JtXyOlgfv%2FPrototipo-Funcional-1.1(CAB)%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D143-4115%26viewport%3D453%252C863%252C0.2%26t%3DbqVVc5POggxrK43J-1%26scaling%3Dscale-down%26starting-point-node-id%3D139%253A3855%26mode%3Ddesign" allowfullscreen></iframe>
                 </div>
             </article>
         </section>
@@ -71,13 +71,13 @@
                 </h2>
                 <div class="row" id="projects-container">
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="../multimedia/img/Job-1.png" alt="CAB App Redesign"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/174275747/CAB-app-Redesign"><img src="../multimedia/img/Job-1.png" alt="Captura de pantalla del proyecto de rediseño de la aplicación móvil CAB App, mostrando una interfaz de usuario moderna y fácil de usar."></a>
                     </div>  
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="../multimedia/img/Job-2.png" alt="WayToGo UX/UI Design"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/162363743/WayToGo-UXUI-Design"><img src="../multimedia/img/Job-2.png" alt="Captura de pantalla del proyecto de creación de una aplicación móvil, WayToGo, visualizando la pantalla principal de la aplicaciñon, demostrando accesibilidad, minimalismo y facilidad de uso"></a>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12" id="a-link-projects">
-                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="../multimedia/img/Job-3.png" alt="Caffè Branding"></a>
+                        <a target="_blank" href="https://www.behance.net/gallery/155638875/Caffe-Brand-Design"><img src="../multimedia/img/Job-3.png" alt="Imagen de la marca del hogar de café Caffè, que representa un diseño innovador y acogedor."></a>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 <ul class="contacto">
                     <li><a href="./index.html">InfiniteDev</a></li>
                     <li><a href="mailto:bautii.centorbii@gmail.com">Enviar correo electrónico</a></li>
-                    <li><a href="tel:+5492616665348">Enviar mensaje a: +54 9 261-666-5348</a></li>
+                    <li><a href="https://wa.link/swfz18">Enviar mensaje a: +54 9 261-666-5348</a></li>
                 </ul>
             </div>
             <!-- Middle Column/Índice -->
