--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -52,11 +52,11 @@
             </nav>
         </header>
     <main class="about-main">
-        <div class="skill-container">
-            <section class="habilidades">
+        <div id="skill-container">
+            <section id="habilidades">
                 <h1>¿Qué es lo que hago?</h1>
                 <p>Soy de Argentina, diseñador UX/UI Jr. En la actualidad me encuentro cursando la carrera de Desarrollo Web en Coderhouse. Estas son las tecnologías que manejo con mayor frecuencia.</p>
-                <ul class="habilidades-ul">
+                <ul id="habilidades-ul">
                     <li><i class="fab fa-figma"></i>Figma</li>
                     <li><i class="fab fa-html5"></i>HTML</li>
                     <li><i class="fab fa-css3"></i>CSS</li>
