--- a/pages/contact.html
+++ b/pages/contact.html
@@ -93,7 +93,7 @@
             <!-- Middle Column/Índice -->
             <div class="col-lg-4 col-md-4 col-sm-12" id="footer-columns">
                 <ul class="indice">
-                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./about.html">Sobre Mí</a></li>
                     <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="./services.html">Servicios</a></li>
