--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
                     </h2>
                     <div class="habilidades-ul">
                         <ul class="" id="aptitudes-list">
-                            <li><i class="fa-solid fa-language"></i>Inglés intermedio-alto</li>
+                            <li><i class="fa-solid fa-language"></i>Nivel de inglés intermedio-alto</li>
                             <li><i class="fa-regular fa-object-ungroup"></i>Diseño Gráfico</li>
                             <li><i class="fa-brands fa-uikit"></i>Diseño UX/UI</li>
                             <li><i class="fa-solid fa-code"></i>Desarrollo Web</li>
